--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -11,6 +11,7 @@
       <div class="brand">
         <span class="brand-mark">MS</span>
         <span class="brand-text">Monitor Server</span>
+        <span class="brand-build">Build {{ build_id }}</span>
       </div>
       {% if session.get("authenticated") %}
         <nav class="nav">
