--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -17,6 +17,7 @@
         <nav class="nav">
           <a href="{{ url_for('status') }}">Status</a>
           <a href="{{ url_for('browse') }}">Arquivos</a>
+          <a href="{{ url_for('services') }}">Serviços</a>
           <a href="{{ url_for('processes') }}">Processos</a>
           <a href="{{ url_for('logout') }}">Sair</a>
         </nav>
