--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -19,6 +19,7 @@
           <a href="{{ url_for('browse') }}">Arquivos</a>
           <a href="{{ url_for('services') }}">Serviços</a>
           <a href="{{ url_for('processes') }}">Processos</a>
+          <a href="{{ url_for('backup') }}">Backup</a>
           <a href="{{ url_for('logout') }}">Sair</a>
         </nav>
       {% endif %}
